Melhorias na logica , controllers etc